# Quizme

./: .env  .gitignore  .mailmap  .ruff.toml  README.md  contributors.md  docker-compose.yml  get_contribs.sh  init_piston.sh  main.py  pyproject.toml  quizme_setup.sh  quizme_start.sh
app/: config.py  main.py
app/services/: code_executor.py  rabbitmq_connection.py  rabbitmq_consumer.py  response_publish.py  test_case_runner.py
backend/: .gitignore  Dockerfile  celery.Dockerfile  endpoint.md  pyproject.toml  requirements.txt
backend/activitylog/: models.py  urls.py  views.py
backend/answers/: models.py  serializers.py  urls.py  views.py
backend/attempts/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/authentication/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/authentication/migrations/: 0001_initial.py
backend/code_executor/: serializers.py  tasks.py  urls.py  views.py
backend/exam/: models.py  producer.py  serializers.py  urls.py  views.py
backend/exam/migrations/: 0001_initial.py  0002_rename_user_id_exam_examiner_id_question_useranswer.py
backend/exam_v2/: apps.py  serializers.py  tasks.py  urls.py  views.py
backend/monitor/: models.py  serializers.py  urls.py  views.py
backend/monitor/utils/: Detector.py  __init__.py  tasks.py
backend/questionbank/: models.py  serializers.py  urls.py  views.py
backend/quizme/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
code-execution/: main.py  pyproject.toml
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/context/: UserContext.tsx
frontend/context/__tests__/: UserContext.test.tsx
frontend/public/: Slug Dungeon game V1.webm
frontend/src/: App.tsx  main.tsx
frontend/src/components/: UserContext.tsx  UserData.ts  navbar.tsx  useUserContext.ts
frontend/src/data/: quest.json
frontend/src/forms/: ExamCreationForm.tsx
frontend/src/hooks/: useClipboardMonitor.ts  useFetchData.ts  useQuestionNavMonitor.ts  useTabFocusMonitor.ts  useWebCamPolling.ts  useWebcamMonitor.ts
frontend/src/layouts/: HomeLayout.tsx
frontend/src/state/: store.ts
frontend/src/styles/: login.css  (+1 more)
(+82 files in other folders)
