[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ahmed El-Kilani <ahmedelkilani01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.4.0"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.4.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
