[tool.poetry]
name = "code-execution"
version = "0.1.0"
description = ""
authors = ["KhaledHamouda <khaled7amoda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
requests = "^2.32.3"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
